# OpenCorsairLink

./: CMakeLists.txt  Makefile  device.c  driver.c  main.c
include/logic/: options.h  scan.h
include/protocol/: commanderpro.h
logic/: options_fan.c  options_led.c  options_pump.c  scan.c
logic/settings/: commanderpro.c
protocol/asetekpro/: led.c
protocol/commanderpro/: fan.c  led.c
protocol/rmi/: fan.c
